# JackCompiler-NAND2Tetris-

./: CMakeLists.txt  CompilationEngine.c  CompilationEngine.h  JackAnalyzer.c  JackTokenizer.c  KeyWord.c  jackTokenizer.h  main.c
Code Generation/CodeGenerator/: CodeGenerator.c  CodeGenerator.h
Code Generation/VMWriter/: VMWriter.c  VMWriter.h
CompilationEngine/: AbstractSyntaxTree.c  AbstractSyntaxTree.h  CompilationEngine.c  CompilationEngine.h  DataType.h  Token.h
CompilationEngine/AbstractSyntaxTree/: AbstractSyntaxTree.c  AbstractSyntaxTree.h
CompilationEngine/Token/: Token.c  Token.h
JackAnalyzer/: JackAnalyzer.c  JackAnalyzer.h  JackAnalyzerForDirectories.c  JackAnalyzerForDirectories.h
JackTokenizer/: JackTokenizer.c  jackTokenizer.h
JackTokenizer/Keyword/: KeyWord.c
Keyword/: KeyWord.c  keyword.h
RoutineTable/: RoutineTable.c  RoutineTable.h
SemanticAnalysis/: SemanticAnalyzer.c  SemanticAnalyzer.h
SemanticAnalysis/ClassTable/: ClassTable.c  ClassTable.h
SemanticAnalysis/FunctionLoader/: FunctionLoader.c  FunctionLoader.h  Loader.c  Loader.h
SemanticAnalysis/HashingFunctions/: HashingFunctions.c  HashingFunctions.h
SemanticAnalysis/RoutineTable/: RoutineTable.c  RoutineTable.h
SemanticAnalysis/SymbolTable/: SymbolTable.c  SymbolTable.h
SymbolTable/: SymbolTable.c  SymbolTable.h
VMWriter/: VMWriter.c  VMWriter.h
data/: output_0.xml
data/input/: Fibonacci.jack
data/input/ArrayTest/: Main.jack  Main.vm
data/input/Average/: Main.jack
data/input/ComplexArrays/: Main.jack
data/input/ExpressionLessSquare/: Main.vm
data/input/Random Stuff/: Main.jack  Main.vm
data/input/Seven/: newfile.jack
data/input/Square/: Main.vm
data/output/: intermediate.xml
debugging/: debuggingTools.c  debuggingTools.h
